      -------------------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

26-Nov-2014 A. Ribon       (hadr-string-diff-V10-00-12)
- G4DiffractiveExcitation : replaced DBL_MAX with a very large mass, to avoid
                            computations with DBL_MAX.

19-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-11)
- Bug connected with abnormal stable meson masses is fixed. Change of masses of particles in
  quark-exchange processes is improved.

  A problem of energy/momentum non-conservation in Xi- nucleus interactions is partly solved.
  Energy/momentum is now conserved, but an acurate treatment of minimal difractive masses of
  strange particles is needed. 

19-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-10)
- 2 bugs are fixed. The first one was connected with multiple quark exchanges in hA interactions
  accompanated by string excitations. A status of such hadrons was not set in a right manner.
  The second bug was in the determination of anti-alpha particle 4-momentum at stopping (at low
  energy). All changes were marked "Uzhi 18 Nov. 2014".


15-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-09)
- Bug is fixed. It was connected with missing of treating of involved nucleons
  of a projectile nucleus in FTFmodel (Case5 instead of Case 4).

connected with annihilations of anti-delta isobars is erased. Now
  G4FTFAnnihilation can treat the processes.
  A fine tuning of parameters for Pi+P interactions is done.

14-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-08)
- Bug connected with annihilations of anti-delta isobars is erased. Now
  G4FTFAnnihilation can treat the processes.
  A fine tuning of parameters for Pi+P interactions is done.
